@@ -2,3 +2,6 @@ K-Meleon bugfixes and implemented features
 ==========================================
 since 0.21:
  - CTRL-N is not assignable as Accelerator key (Open in New Window now)
+ - Plugin support for menus/toolbars
+ - Scriptable menus
+ - preferences dialog
